Chat rendering & multiple YouTube account support